[project]
name = "make-motion-trail-image"
version = "0.1.0"
description = "Make motion trail image using Segment Anything Model 3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decord",
    "einops",
    "hydra-core",
    "matplotlib",
    "omegaconf",
    "open-clip-torch",
    "opencv-python>=4.11.0.86",
    "gradio",
    "psutil",
    "pycocotools",
    "sam3",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "submitit",
    "torchmetrics",
]

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3.git"}

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
