[project]
name = "make-motion-trail-image"
version = "0.1.0"
description = "Make motion trail image using Segment Anything Model 3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.0",
    "hydra-core>=1.3.0",
    "matplotlib>=3.10.0",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.11.0.86",
    "gradio>=6.0.0",
    "psutil>=7.0.0",
    "pycocotools>=2.0.0",
    "sam3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "submitit>=1.5.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchmetrics>=1.8.0",
]

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3.git"}
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
